Changes in Rcgmin

Changes before 2012-4-30 not recorded 

TODOS
   o    Eventually include different line searches, possibly in a
        separate routine

2014-7-17
   o    Changed default of control$checkgrad to FALSE. Changed error message
	that mentions Rvmmin to Rcgmin.

2013-9-24 
   o    Warning that parameter moved to bound suppressed when start
        is on the bound.

2013-8-20

   o    Allow quoted gradient names to bring in different gradient 
        routines. Also to allow gradient approximation step to be
	adjusted.

   o    Dependency on optextras rather than numDeriv

2013-2-20

   o    Removed fail, setstep (not used), ceps from Rcgminu (not used)

2012-8-08

   o    Minor edits and addition of references.

2012-6-09

   o    User-tolerance for gradient size.

2012-5-21
   o	Separation of constrained and unconstrained versions.
