@@ -1,8 +1,8 @@
 Package: Rvmmin
 Type: Package
 Title: Variable Metric Nonlinear Function Minimization
-Version: 2018-4.11
-Date: 2018-04-11
+Version: 2018-11.8
+Date: 2018-11-08
 Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
         c("aut", "cre"), email = "nashjc@uottawa.ca") )
 Maintainer: John C. Nash <nashjc@uottawa.ca>
